# qt-panda

./: .gitignore  README.md
Archive/dans-software-port/: README.md  SESSION_RESUME.md  SMOKE_TEST.md
Archive/pc/: stm_control_test.py
Archive/pc/qtpanda/: dependencies.txt  form.ui  plotFrame.py  qt_log_handler.py  requirements.txt  setup.cfg  stab_metrics.py  stm_control.py  ui_form.py  widget.py
Archive/pc/qtpanda/images/: makegifs.py
dans-software-port/: .gitignore
dans-software-port/pc/: TECH_DEEP_DIVE.md
design/: NewCase.scad  SamplePlate_TM15_PACF.stl
design/NewCase/: BaseAdaptor.stl  CaseFloatTop.stl  CaseMid.stl
design/maglevvibisotab/: table1_4x4_bottom.stl  table1_4x4_top.stl  table2.scad  table2Bottom.stl  table2Top.stl
documentation/: DOCUMENTATION_README.md  PC_GUI_LAYOUT.md  SYSTEM_LAUNCH_GUIDE.md
pc/: stm_app.py  stm_control.py
pc/qtpanda/: ReadMe.md  STMBoxWidget.py  form.ui  plotframe.py  pyproject.toml  qtpanda.pyproject  stm_control.py  ui_form.py  widget.py
software/pc/qtpanda/: GridSpectroWorker.py  ReadMe.md  calibration.json  copilot_bridge.py  dac_restore.py  drift_hold.py  form.ui  frame_logger.py  live_raster.py  main.py  plotFrame.py  plotframe.py  pyproject.toml  qtpanda.pyproject  raw_logger.py  raw_scan_reconstruct.py  replay_frames.py  requirements.txt  run_offline.sh  scan_controller.py  scst_logger.py  serial_reader.py  stab_metrics.py  stab_runner.py  status_logger.py  stm_control.py  superscan.py  tab_help.py  ui_form.py  widget.py
software/pc/qtpanda/emulator/: README.md  firmware_emulator.py
software/pc/qtpanda/tests/: conftest.py  test_conversions.py  test_dac_restore.py  test_drift_hold.py  test_frame_logger.py  test_golden_frame.py  test_raw_logger.py  test_scst_logger.py  test_serial_reader.py  test_status_frame.py  test_status_logger.py  test_superscan.py
(+129 files in other folders)
