[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qtpanda-stm"
version = "0.1.0"
description = "Qt-based STM control and data acquisition software"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name"}
]

dependencies = [
    "PySide6>=6.5",
    "pyqtgraph>=0.13",
    "numpy>=1.24",
    "tifffile",
    "pyserial",
    "h5py",
    "gwyfile",
    "matplotlib",
    "scipy"
]

[project.scripts]
qtpanda-stm = "widget:main"

[tool.setuptools.packages.find]
where = ["."]
