[metadata]
name = qtpanda-stm
version = 0.1.0
description = Qt-based STM control and data acquisition software
author = Steve Hernandez
license = MIT

[options]
python_requires = >=3.10
packages = find:
install_requires =
    PySide6>=6.5
    pyqtgraph>=0.13
    numpy>=1.24
    tifffile
    pyserial
    h5py
    gwyfile

[options.entry_points]
console_scripts =
    qtpanda-stm = widget:main

[options.packages.find]
where = .
