[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qtpanda-stm"
version = "0.1.0"
description = "Dan-style STM control and data acquisition software (qt-panda port)"
requires-python = ">=3.10"
license = {text = "MIT"}

# Only packages actually imported by the runtime modules. h5py/matplotlib/
# scipy were listed historically but are never imported — removed.
dependencies = [
    "PySide6>=6.5",
    "pyqtgraph>=0.13",
    "numpy>=1.24",
    "pyserial",
    "tifffile",
    "gwyfile",
]

[project.scripts]
qtpanda-stm = "widget:main"

[tool.setuptools.packages.find]
where = ["."]
